--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!DOCTYPE html>
-
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>ChasingGenerationS - Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    </head>
+    <body>
+        <h1>Testing!</h1>
+    </body>
+</html>
