--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     </head>
     <body>
-        <h1>Testing!</h1>
+        <header>
+            <h1>Home</h1>
+        </header>
+        <div id="navwrapper">    
+            <nav class="clearfix">
+                    <ul>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="getstarted.html">Get Started</a></li>
+                        <li><a href="contactus.html">Contact Us</a></li>
+                    </ul>
+                </nav>
+                </div>
+                <div id="mainwrapper">
     </body>
 </html>
