--- a/about.html
+++ b/about.html
@@ -6,9 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     </head>
     <body>
+        <div id="headerwrapper">
         <header>
             <h1>About</h1>
         </header>
+        </div>
         <div id="navwrapper">    
             <nav class="clearfix">
                     <ul>
@@ -20,5 +22,13 @@
                 </nav>
                 </div>
                 <div id="mainwrapper">
+                    <main>
+                </div>
+                    </main>
+                    <div id="footerwrapper">
+                        <footer>
+                            &copy; 2025 &bull; Richard Stacey &bull; 385-479-1826
+                        </footer>
+                        </div>
     </body>
 </html>
