Added image files to project

--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="headerwrapper">
-        <header>
+        <header class="clearfix">
             <h1>Contact Us</h1>
         </header>
         </div>
