--- a/getstarted.html
+++ b/getstarted.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="headerwrapper"></div>
-        <header>
+        <header class="clearfix">
             <h1>Get Started</h1>
         </header>
         </div>
