--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div id="headerwrapper">
-        <header>
+        <header class="clearfix">
+        <figure class="logo">
+            <img src="">
+        </figure>
             <h1>Home</h1>
         </header>
         </div>
