--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="headerwrapper">
-        <header>
+        <header class="clearfix">
             <h1>About</h1>
         </header>
         </div>
