Added logo in first page, needs styling

--- a/getstarted.html
+++ b/getstarted.html
@@ -8,6 +8,9 @@
     <body>
         <div id="headerwrapper"></div>
         <header class="clearfix">
+            <figure class="logo">
+                <img src="ChasingGenerationS Logo with the Trademark.jpeg">
+            </figure>
             <h1>Get Started</h1>
         </header>
         </div>
