--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="headerwrapper">
         <header class="clearfix">
         <figure class="logo">
-            <img src="">
+            <img src="ChasingGenerationS Logo with the Trademark.jpeg">
         </figure>
             <h1>Home</h1>
         </header>
