--- a/contactus.html
+++ b/contactus.html
@@ -8,6 +8,9 @@
     <body>
         <div id="headerwrapper">
         <header class="clearfix">
+            <figure class="logo">
+                <img src="ChasingGenerationS Logo with the Trademark.jpeg">
+            </figure>
             <h1>Contact Us</h1>
         </header>
         </div>
