Finished home page skeleton

--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
                 </div>
                 <div id="mainwrapper">
                     <main>
+                        <div id="banner">
+                            <img src="bannerimage.jpg" />
+                        </div>
+                        <h1>"Insert Slogan here"</h1>
+                        <div id="intro">
+                            <p>Continually syndicate one-to-one initiatives before virtual materials. Energistically recaptiualize premium results via one-to-one vortals. Quickly benchmark an expanded array of sources rather than cooperative human capital. Dynamically visualize equity invested relationships rather than distinctive e-business. Credibly engineer distributed e-markets after premium human capital.
+
+                                Conveniently seize market positioning results vis-a-vis cost effective internal or "organic" sources. Proactively e-enable value-added communities after turnkey services. Distinctively engage 24/365 human capital for low-risk high-yield portals. Seamlessly predominate efficient initiatives for distributed methodologies. Distinctively reintermediate sustainable opportunities before premier internal or "organic" sources.</p>
+                        </div>
+                        <div id="whyimage">
+                            <img src="powerpointimages/filmprojector.jpg" />
+                        </div>
+                        <div id="whyfamilyhistory">
+                            <h1>Why Family History?</h1>
+                            <p>Continually syndicate one-to-one initiatives before virtual materials. Energistically recaptiualize premium results via one-to-one vortals. Quickly benchmark an expanded array of sources rather than cooperative human capital. Dynamically visualize equity invested relationships rather than distinctive e-business. Credibly engineer distributed e-markets after premium human capital.
+
+                                Conveniently seize market positioning results vis-a-vis cost effective internal or "organic" sources. Proactively e-enable value-added communities after turnkey services. Distinctively engage 24/365 human capital for low-risk high-yield portals. Seamlessly predominate efficient initiatives for distributed methodologies. Distinctively reintermediate sustainable opportunities before premier internal or "organic" sources.</p>
+                        </div>
+                        <button>Start now!</button>
                 </div>
                     </main>
                     <div id="footerwrapper">
